Added results directory to store figures from analysis

--- a/scripts/classify_leaves.ipynb
+++ b/scripts/classify_leaves.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "80b41f22-8ce5-43e5-a340-bc8666a5d180",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,8 @@
     "plt.bar(n_neigh,n_accuracy, color = 'gray');\n",
     "plt.xticks(n_neigh);\n",
     "plt.xlabel(\"Number of neighbors considered\");\n",
-    "plt.ylabel(\"Accuracy\");"
+    "plt.ylabel(\"Accuracy\");\n",
+    "plt.savefig('../results/k_neighbor_accuracy.png', bbox_inches='tight', dpi=600)"
    ]
   },
   {
@@ -189,7 +190,8 @@
     "plt.bar(s_class,s_accuracy, color = 'gray');\n",
     "plt.xticks(s_class);\n",
     "plt.xlabel(\"Shapelets per class\");\n",
-    "plt.ylabel(\"Accuracy\");"
+    "plt.ylabel(\"Accuracy\");\n",
+    "plt.savefig('../results/shapelet_clas_accuracy.png', bbox_inches='tight', dpi=600)"
    ]
   },
   {
