--- a/scripts/classify_leaves.ipynb
+++ b/scripts/classify_leaves.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "744e3123-e1c0-4f13-81f8-a7094e8af3dc",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
     "plt.xticks(s_class);\n",
     "plt.xlabel(\"Shapelets per class\");\n",
     "plt.ylabel(\"Accuracy\");\n",
-    "plt.savefig('../results/shapelet_clas_accuracy.png', bbox_inches='tight', dpi=600)"
+    "plt.savefig('../results/shapelet_class_accuracy.png', bbox_inches='tight', dpi=600)"
    ]
   },
   {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "06ada80b-af93-48c9-b7c4-70e7bd80a19e",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,9 @@
     "shp_cm_display = ConfusionMatrixDisplay(shp_cm, display_labels = classes).plot(ax=axes[1], cmap='Greens', colorbar=False)\n",
     "\n",
     "axes[0].set_title(f\"Dynamic Time Warping. Accuracy: {dtw_acc:.3f}\");\n",
-    "axes[1].set_title(f\"Shapelet Transform. Accuracy: {shp_acc:.3f}\");"
+    "axes[1].set_title(f\"Shapelet Transform. Accuracy: {shp_acc:.3f}\");\n",
+    "\n",
+    "fig.savefig('confusion_matrix_comparison.png', bbox_inches='tight', dpi=600)"
    ]
   },
   {
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "0b12af02-e25c-443e-9056-5a6188ec322e",
    "metadata": {},
    "outputs": [
@@ -356,7 +358,9 @@
     "axes[1].set_xlabel(\"Proportion of data corrupted\")\n",
     "axes[1].set_ylabel(\"Accuracy\")\n",
     "axes[1].set_ylim(0,1)\n",
-    "axes[1].set_title(\"Shapelet Transform\");"
+    "axes[1].set_title(\"Shapelet Transform\");\n",
+    "\n",
+    "fig.savefig('corruption_accuracy_comparison.png', bbox_inches='tight', dpi=600)"
    ]
   },
   {
