Updated HTML file to latest commit in notebook

--- a/scripts/classify_leaves.ipynb
+++ b/scripts/classify_leaves.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "06ada80b-af93-48c9-b7c4-70e7bd80a19e",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
     "axes[0].set_title(f\"Dynamic Time Warping. Accuracy: {dtw_acc:.3f}\");\n",
     "axes[1].set_title(f\"Shapelet Transform. Accuracy: {shp_acc:.3f}\");\n",
     "\n",
-    "fig.savefig('confusion_matrix_comparison.png', bbox_inches='tight', dpi=600)"
+    "fig.savefig('../results/confusion_matrix_comparison.png', bbox_inches='tight', dpi=600)"
    ]
   },
   {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "0b12af02-e25c-443e-9056-5a6188ec322e",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
     "axes[1].set_ylim(0,1)\n",
     "axes[1].set_title(\"Shapelet Transform\");\n",
     "\n",
-    "fig.savefig('corruption_accuracy_comparison.png', bbox_inches='tight', dpi=600)"
+    "fig.savefig('../results/corruption_accuracy_comparison.png', bbox_inches='tight', dpi=600)"
    ]
   },
   {
